# AniWorld-Downloader

./: .gitignore  .pylintrc  LICENSE  MANIFEST.in  README.md  fetch.sh  index.html  main.py  pyproject.toml  requirements.txt  tobias.html
.github/: FUNDING.yml
.github/workflows/: build.yml  python-linting.py  python-linting.yml
assets/css/: styles.css
assets/js/: main.js
server/: app.py
src/aniworld/: Aniworld downloader online  __init__.py  __main__.py  ani_skip.py  aniworld.py  ascii_art.py  config.py  entry.py  execute.py  globals.py  menu.py  models.py  parser.py  search-testing.py  search.py  skip.lua  test.py
src/aniworld/action/: __init__.py  download.py  syncplay.py  watch.py
src/aniworld/aniskip/: __init__.py  ani_skip.py  aniskip.py  install.py  skip.lua
src/aniworld/aniskip/scripts/: aniskip.lua  autoexit.lua  autostart.lua
src/aniworld/common/: __init__.py  action.py  adventure.py  ascii_art.py  common.py  make_request.py  make_requests.py  messagebox.py
src/aniworld/extractors/: __init__.py  doodstream.py  nhentai.py  streamkiste.py  streamtape.py  voe.py
src/aniworld/extractors/aniworld/: doodstream.py  streamtape.py  vidoza.py
src/aniworld/extractors/hanime/: hanime.py
src/aniworld/extractors/jav/: jav.py
src/aniworld/extractors/nhentai/: nhentai.py
src/aniworld/extractors/provider/: doodstream.py  luluvdo.py  speedfiles.py  vidmoly.py  vidoza.py  voe.py
src/aniworld/extractors/streamkiste/: streamkiste.py
src/aniworld/helpers/: doodstream.py  streamtape.py  vidoza.py  voe.py
testing/: test_class_anime.py  test_class_episode.py
tests/: test_aniworld.py  test_extractors.py  test_fetch.py  test_proxy.py  test_syncplay.py
