[project]
name = "aniworld"
version = "2.1.9"
authors = [
  { name="Phoenixthrush UwU", email="contact@phoenixthrush.com" },
]
description = "Command line tool designed to download and stream content from aniworld.to"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    'requests',
    'bs4',
    'npyscreen',
    'thefuzz',
    'colorlog',
    'py7zr',
    'packaging',
    'yt-dlp',
    'windows-curses; platform_system == "Windows"'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/phoenixthrush/Aniworld-Downloader"
Issues = "https://github.com/phoenixthrush/Aniworld-Downloader/issues"

[project.scripts]
aniworld = "aniworld.__main__:main"
